# bookros2_ws

./: README.md
install/: local_setup.sh  setup.sh
install/br2_basics/lib/br2_basics/: executors  logger  logger_class  param_reader  publisher  publisher_class  subscriber_class
install/br2_basics/share/br2_basics/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/br2_bt_bumpgo/include/br2_bt_bumpgo/: Back.hpp  Forward.hpp  IsObstacle.hpp  Turn.hpp
install/br2_bt_bumpgo/lib/br2_bt_bumpgo/: bt_bumpgo  bt_forward
install/br2_bt_bumpgo/share/br2_bt_bumpgo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/br2_bt_patrolling/include/br2_bt_patrolling/: BatteryChecker.hpp  GetWaypoint.hpp  Move.hpp  Patrol.hpp  Recharge.hpp  TrackObjects.hpp
install/br2_bt_patrolling/lib/br2_bt_patrolling/: patrolling_main
install/br2_bt_patrolling/share/br2_bt_patrolling/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/br2_fsm_bumpgo_cpp/lib/br2_fsm_bumpgo_cpp/: bumpgo
install/br2_fsm_bumpgo_cpp/share/br2_fsm_bumpgo_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build  latest_list
src/book_ros2/br2_fsm_bumpgo_py/: setup.py
src/book_ros2/br2_tf2_detector_py/: package.xml  setup.cfg  setup.py
src/book_ros2/br2_tf2_detector_py/br2_tf2_detector_py/: ObstacleMonitorNode.py
src/learning_tf2_py/: package.xml  setup.py
src/sam_bot_description/launch/: prova.launch.py
(+1227 files in other folders)
